...
                                
                                fetchEvents()
                            } label: {
                                Label(Localization.labels.addTodoToday, systemImage: "calendar")
                            }
                            .tint(Color.theme.green)
                            .accessibilityIdentifier("AddEventAsTodayTodoButton")
                            
                        }
                        .foregroundColor(Color.theme.surfaceGlassTextColor)
                        .listRowBackground(Color.theme.surfaceGlassColor)
                        .font(Font.app.listItem)
                    }
...
                    Button(action: {
                        presentationMode.wrappedValue.dismiss()
                    }) {
                        Text(Localization.labels.back)
                            .font(Font.app.button)
                    }
                    .accessibilityIdentifier("CancelTodaysEventsButton")
                }
                ToolbarItemGroup(placement: .principal) {
                    let label : String = onlyToday ? Localization.labels.todaysEvents : Localization.labels.upcomingEvents;
                    Text(label)
                        .foregroundColor(Color.theme.primary)
                        .font(Font.app.header)
...
