...
            Button(action: {
                isTodaysEventsPresented = true
            }) {
                Label(Localization.labels.upcomingEvents, systemImage: "clock")
                    .foregroundColor(Color.theme.primary)
            }
            .accessibilityIdentifier("CalenderViewButton")
            
            Button(action: {
                if let url = URL(string: "calshow://") {
                    UIApplication.shared.open(url)
                }
            }) {
...
                Label(Localization.labels.about, systemImage: "info.circle")
            }
            
        } label: {
            Label("Menu", systemImage: "line.horizontal.3")
                .foregroundColor(Color.theme.primary)
                .accessibilityIdentifier("ClaraMenu")
        }
        .sheet(isPresented: $isPriorityMatrixPresented) {
            let todayTasks : [Todo] = todoViewModel.todayTodos.map(\.todo).filter{ !$0.isDone }
            PriorityMatrixView(
                tasks: todayTasks,
                onConfirm: { urgentTasks, importantAndUrgentTasks, nothingOfBothTasks, importantTasks in
...
