...
                                        Button(role: .destructive) {
                                            todoViewModel.deleteTodo(todo)
                                        } label: {
                                            Label(Localization.labels.delete, systemImage: "trash")
                                        }
                                        .tint(Color.theme.red)
                                        .accessibilityIdentifier("TodaysTodosDeleteTodo")
                                        
                                    }
                                    .swipeActions(edge: .leading, allowsFullSwipe: true) {
                                        
                                        Button {
                                            todoViewModel.setToDone(todayTodo)
...
                                showingAddTodo = true
                            }
                        }) {
                            Image(systemName: "plus.circle")
                                .foregroundColor(Color.theme.primary)
                        }
                        .accessibilityIdentifier("AddTodayTodoButton")
                    }
                }
            }
            .sheet(item: $sharedTodos) { wrapper in
                let todos : [Todo] = wrapper.todos
                let dateString = StyleUtils.dateTimeFormatter.string(from: Date())
...
